see an announcement

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,13 @@
 <h1><%= @post.title %></h1>
-<small>Submitted <%= time_ago_in_words(@post.created_at) %> ago</small>
+<p>Post by: <%= @post.user.name %></p>
+<small>Créé le: <%= @post.created_at %></small>
+<p><%= @post.body %></p>
 <p>Category: <%= @post.category.name %></p>
+<p>Localisation: <%= @post.localisation %></p>
+<p>Email: <a href="mailto:<%= @post.user.email %>"><%= @post.user.email %></a></p>
+<p>Téléphone: <a href="tel:<%= @post.user.phone_number %>"><%= @post.user.phone_number %></a></p>
 <% if @post.user == current_user %>
 	<p><small><%= link_to 'Edit', edit_post_path(@post) %> |
 	<%= link_to 'Delete', post_path(@post), method: :delete, data:{confirm: 'Are you sure ?'} %></small>
 	</p>
 	<% end %>
-<p><%= @post.body %></p>
