add paginate bootstrap and dashboard

--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,9 +1,13 @@
-<h1>Annonce</h1>
-<% @posts.each do |post|%>
+<div class="row">
+	<% if @posts.blank? %>
+		<p>Aucun résultat ne correspond à votre recherche</p>
+	<% else %>
+		<% @posts.each do |post|%>
 	<h2><%= link_to post.title, post %></h2>
 	<p><%= post.created_at.strftime("%d %B %Y")%></p>
 	<p>Post by: <%= post.user.name %></p>
 	<p>Category:<%= link_to post.category.name, category_posts_path(post.category) %> </p>
 	<p><%= post.body %></p>
 <% end %>
- <%= will_paginate @lists, renderer: BootstrapPagination::Rails,  :previous_label => 'Précédent', :next_label => 'Suivant' %>
+	<% end %>
+</div>
