--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,15 +4,19 @@
   <%= devise_error_messages! %>
 <form>
    <div class="form-group">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true,:class=>"form-control" %>
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true,:class=>"form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email,:class=>"form-control" %>
   </div>
-
+  
+  <div class="form-group">
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar,:class=>"form-control" %>
+  </div>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
