--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Annonce</h1>
 <% @posts.each do |post|%>
 	<h2><%= link_to post.title, post %></h2>
+	<%= image_tag post.image.url(:medium) %>
 	<p><%= post.created_at.strftime("%d %B %Y")%></p>
 	<p>Post by: <%= post.user.name %></p>
 	<p>Category:<%= link_to post.category.name, category_posts_path(post.category) %> </p>
