--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,6 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><%= link_to "Accueil", root_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Catégories <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -32,7 +31,8 @@
         <li><%= link_to "Connexion", user_session_path %></li>
         <% else %>
         <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
-        <li><%= link_to "Dashbord", dashboards_path %></li>
+        <li><%= link_to  current_user.name , dashboards_path %></li>
+        <li><%= link_to 'Your Conversations', conversations_path %></li>
         <% end %>
       </ul>
       <%= form_tag search_posts_path, method: :get, class:"navbar-form navbar-right", role:"search" do %>
